fix: fix responsive bevavior on smaller width
add several breakpoints for smaller width screens

--- a/src/Components/NavBar/NavBar.module.css
+++ b/src/Components/NavBar/NavBar.module.css
@@ -42,7 +42,6 @@
 
 .active {
     text-decoration: none;
-    color: var(--dark);
 }
 
 @media screen and (max-width: 991px) {
